# sira

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  QUICKSTART.md  README.md  SPRINT_04_STATUS.md  SPRINT_STATUS.md  analyze_patterns.py  pyproject.toml  query.json  requirements.txt  ruff.toml  run_baseline_comparison.py  start-sira.bat  stop-sira.bat  test-query.json  test_ac080.py  test_ac081.py  test_baseline.py  test_del007.ps1  test_del008.ps1  test_del010.ps1  test_del016.ps1  test_evaluation.py  test_r_squared.py  test_retrieval.py  warp.md
data/matlab/: config_temp.json  episodes.mat  optimized_config.json
docs/00-Initiation/: ai-model-evaluation-criteria.md  constraints-and-assumptions.md  discovery-questionnaire.md  glossary.md  how-sira-learns.md  risks-log.md  scope-and-objectives.md  stakeholders-and-roles.md  trading-signals-feasibility.md  trading-signals-revised-plan.md
docs/10-Requirements/: PRD.md  functional-requirements.md  non-functional-requirements.md
docs/20-Requirements/: community-learning-deliverables.md
docs/20-Solution/: deployment-topology.md  matlab-analysis-specs.md  solution-architecture.md  solution-design.md  tech-stack-and-language.md
docs/30-Planning/: PROJECT_PLAN.md  deliverables-register.md  new-deliverables-matlab-metrics.md  phase-plan.md  phase-planning-review-2025-11-16.md  sprint3-community-learning-summary.md
docs/40-Testing/: acceptance-criteria-index.md  sprint-04-testing-guide.md  sprint-04-testing-report-complete.md  test-cases.md  (+5 more)
matlab/: analyze_performance.m  load_episodes.m  optimize_config.m  optimize_patterns.m  sira_dashboard.m
migrations/: 003_pattern_usage.sql  004_metrics.sql
scripts/: quality.ps1  schedule_matlab_analytics.py
tests/: conftest.py  test_integration.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.js
(+114 files in other folders)
